Removed non java 8 compatible code